[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dazzle-linklib"
dynamic = ["version"]
description = "Content-addressable link-record library -- the DazzleLib stack's L2 serialization layer (typed locators, content_id, export/import/rebase/scan)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "djdarcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = ["dazzlelib", "links", "symlink", "junction", "serialization", "content-addressable", "anti-link-rot", "relinker", "stack"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
]

# dazzle-lib (B, bedrock): Serializable / DazzleDataMixin / LinkError / LinkTargetDict.
# dazzle-filekit (L1): the OS mechanics L2 operations delegate to internally
# (symlink create, metadata/timestamp apply, relative-path compute) so consumers
# call one L2 operation instead of gluing record-pieces + filekit themselves.
# unctools (L0) joins when the UNC-identity delegation code lands.
dependencies = [
    "dazzle-lib>=0.1.0",
    # >=0.3.1: 0.3.0 corrupted a symlink TARGET's timestamps when applying a
    # record's timestamps to the link; the operations rely on the 0.3.1 fix.
    "dazzle-filekit>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DazzleLib/dazzle-linklib"
Repository = "https://github.com/DazzleLib/dazzle-linklib"
Issues = "https://github.com/DazzleLib/dazzle-linklib/issues"

# Library-only: no console_scripts. The `dazzlelink` CLI lives in the
# DazzleTools/dazzlelink tool, which consumes this library (STACK-MAP D1).

[tool.setuptools.dynamic]
version = {attr = "dazzle_linklib._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dazzle_linklib", "dazzle_linklib.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "dazzle_linklib/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/DazzleLib/dazzle-linklib"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
